55

19-01-10 Write out Camera hints after rendering
[2h]	 Removed 'debug' preference option -> now a menu item.
		 New splash
		 Mandelbulb is now default frag

17-01-10 Make screenshot
[2h]	 Updated 3D raytracer

16-01-10 Now showing the line number for preprocessed scripts making debugging much easier
[2h]	 Removed QFile pointer madness
		 Added Julia option to Mandelbrots
		 Added "linear clarity" to DE-raytracer	
		 Added smoother gradient background


15-01-10 Updated Orbit traps (now distance to three coordinate planes and origin)
[1h]

14-01-10 Fixed linux compilation errors and warning (untested).
[2h]	 Fixed registry settings bug (include path not read before opening preferences first time).
		 Fixed unconnected reset() signal.
		 Fixed paste from selected text newline bug.
		 Added drag'n'drop support for 'fragparams' files.
		 Better window builds and deploy

13-01-10 Updated syntax highlighting.
[2h]	 Refactoring

11-01-10 Added different rendering modes: automatic, manual, and continuous (with FPS count).
[3h]	 Added parameter menu.

09-01-10 Added orbit trap coloring support to 3D DE raytracer.
[2h]	 Added include path support
		 Refactored examples

06-01-10 Added texture support (required the non-standard Qt glextensions.cpp file)
[2h]	 Texture usage: uniform sampler2D texture3; file[Examples/texture.jpg]
		 Added MandelbrotOrbitTrap example.
		 
04-01-10 Script INFO has blue color
[2h]	 Updated Mandelbulb & raytracer scripts (now gradient background can be toggled)
		 Fix: 'default' should be default group name.
		 Added 4D Quaternion Julia script.
		 Support for user uniforms: uniform bool GradientBackground; checkbox[false]
		 
26-01-10->03-01-10
[6h]	 Changed to GitHub for main development.
		 Added '#replace' command. This will perform a search'n'replace in all *later* code lines. Notice the two arguments must be double-quoted.
		 Added '#includeonly' command. Works like the normal '#include', but will ignore '#include's in the included file.